@@ -95,6 +95,13 @@ SKIP:
   is( @lines , 1 , 'one log entry' );
 }
 
+my @raw_log = $git->log({ raw => 1 });
+is(@raw_log, 1, 'one raw log entry');
+
+my $raw_log = $raw_log[0];
+my $excepted_mod = Git::Wrapper::File::RawModification->new("foo/bar","A",'000000','100644','0000000',"ce01362");
+is_deeply($raw_log->modifications, $excepted_mod);
+
 SKIP: {
     # Test empty commit message
     IO::File->new(">" . File::Spec->catfile($dir, qw(second_commit)))->print("second_commit\n");
